# beliakov-notes

./: .gitignore  README.md
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json  hotkeys.json  workspace.json
Excalidraw/: Drawing 2025-02-17 08.52.19.excalidraw.md  Drawing 2025-03-20 15.42.38.excalidraw.md
Year 1/: Privacy Policy .txt  Privacy Policy.md
Year 1/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  workspace.json
Year 1/Untitled/: ЧГУ.md
Year 1/Web-программирование/: 01. Интернет.md  02. Сайты.md  03. Взаимодействие сервера и клиента.md  04. всякая фигня.md  05. Гиперссылки.md  06. Графика.md  07. Формы.md  Общая информация.md
Year 1/Дискретная математика/: 01. Дискретная математика.md  02. Математическая логика.md  03. Законы логики.md  04. Нормальные формы для формул алгебры высказываний.md  05. Полином Жегалкина.md  06. Множества.md  07. Графы.md  Лабораторная работа №2.md  Общая информация.md
Year 1/Математический анализ/: 01. Дифференциальное исчисление функции нескольких переменных.md  02. Понятие двойного интеграла. Сведение двойного интеграла к повторному.md  03. Криволинейные и поверхностные интегралы.md  04. Числовые ряды. Сходимость числовых рядов.md  05. Дифференциальные уравнения.md  (+1 more)
Year 2/: Структура.md
Year 2/Структуры и алгоритмы обработки данных/Лабораторные/6. Графы/Solutions/Rust/: Cargo.toml  input.txt
Year 2/Структуры и алгоритмы обработки данных/Лабораторные/6. Графы/Solutions/Rust/src/: egui_graph_prep.rs  main.rs  structs.rs
(+508 files in other folders)
