[package]
name = "pisha-lab6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_graphs = { version = "0.19.0", features = ["egui_persistence", "serde"] }
petgraph = "0.6.4"
egui = "0.26.2"
eframe = "0.26.2"
cc = "1.0.90"
rand = "0.8.5"